issue comment 동기화 추가 적용